Configured project to use built package artifact

--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "build_lib_watch": "ng build example-ng6-lib --watch",
+    "build_lib": "ng build package-test-ng7",
+    "npm_pack": "cd dist/package-test-ng7 && npm pack",
+    "package": "npm run build_lib && npm run npm_pack"
   },
   "private": true,
   "dependencies": {
@@ -21,6 +25,7 @@
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
     "core-js": "^2.5.4",
+    "package-test-ng7": "file:dist/package-test-ng7/package-test-ng7-0.0.1.tgz",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
